unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Update_History__c/DSCORGPKG__DiscoverOrg_Update_History__c.object-meta.xml
<CustomObject>
    <label>DiscoverOrg Update History</label>
    <nameField>
        <displayFormat>Hist-{0000}</displayFormat>
        <label>DiscoverOrg Update History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DiscoverOrg Update History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>