unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Update_History__c/fields/DSCORGPKG__FieldName__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__FieldName__c</fullName>
    <label>FieldName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>