unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Update_History__c/fields/DSCORGPKG__Lead__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>DiscoverOrg Update History</relationshipLabel>
    <relationshipName>DiscoverOrg_Update_History</relationshipName>
    <type>Lookup</type>
</CustomField>