unpackaged/main/default/objects/DSCORGPKG__DiscoverOrg_Update_History__c/fields/DSCORGPKG__Old_Value__c.field-meta.xml
<CustomField>
    <fullName>DSCORGPKG__Old_Value__c</fullName>
    <label>Old Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>